# CornerStoneSDK

./: README.md
android/: CMakeLists.txt  build_android.py
android/unity/: CMakeLists.txt  build_android_unity_so.py
cpplint/: cpplint_cs.py
ios/CornerStoneSDK.xcodeproj/: project.pbxproj
ios/CornerStoneSDK.xcodeproj/xcshareddata/xcschemes/: CornerStoneSDK.xcscheme
ios/CornerStoneSDK.xcodeproj/xcuserdata/eipark.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CornerStoneSDKCore.cpp  cornerstonesdkcore.cpp  cornerstonesdkcore.h  main.cpp
src/include/: CornerStoneSDKCore.h  cornerstonesdkcore.h
src/memory/: IMemoryAllocator.h  MemoryAllocator_Default.cpp  MemoryAllocator_Default.h  MemoryAllocator_Unreal.cpp  MemoryAllocator_Unreal.h  MemoryUtils.h  csmemory_api.h  csmemoryallocator.cpp  csmemoryallocator.h  csnewdelete.h  memoryutils.h
src/platform/: ISDKPlatformServices.h  PlatformServices_Default.cpp  PlatformServices_Default.h  PlatformServices_Unreal.cpp  PlatformServices_Unreal.h
src/thread/: IThread.h  IThreadAllocator.h  ManagedThreadPool.cpp  ManagedThreadPool.h  ManagedThreadPool_impl.h  ThreadAllocator_Default.cpp  ThreadAllocator_Default.h  ThreadAllocator_Unreal.cpp  ThreadAllocator_Unreal.h  Thread_Default.cpp  Thread_Default.h  Thread_Unreal.cpp  Thread_Unreal.h  csthread_api.h  csthreadallocator.cpp  csthreadallocator.h  managedthreadpool.cpp  managedthreadpool.h  managedthreadpool_impl.h
tools/: copy_headers_and_libs.py
unity/: cornerstone_c_api.cpp  cornerstone_c_api.h
unity/CornerStoneSDK/Runtime/: CornerstoneComponent.cs  CornerstoneNative.cs
unreal/CornerStoneUE/: CornerStoneUE.uplugin
unreal/CornerStoneUE/Source/CornerStoneUE/: CornerStoneUE.Build.cs
unreal/CornerStoneUE/Source/CornerStoneUE/Private/: CornerStoneUE.cpp
unreal/CornerStoneUE/Source/CornerStoneUE/Public/: CornerStoneUE.h
v143/: CornerStoneSDK.sln  CornerStoneSDK.vcxproj  CornerStoneSDK.vcxproj.filters
